# redforge

./: .gitignore  CHANGELOG.md  README.md  WRITEUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
branchbreak/: __init__.py  alert.py  atlas.py  cli.py  converters.py  providers.py  report.py  scan.py  search.py  store.py  taxonomy.py  validate.py
examples/: github-actions.yml
profiles/: crescendo.json  custom-objectives.example.json  default.json  ollama.json
redforge/: __init__.py  atlas.py  attacker.py  cli.py  judge.py  objectives.py  providers.py  report.py  scan.py  scoring.py  search.py  store.py
results/: findings.md  report.html  report.json  report.md
results-crescendo/: report.html  report.json  report.md
results-ollama/: report.html  report.json  report.md
results-ollama-trials/trial1/: report.html  report.json  report.md
results-ollama-trials/trial2/: report.html  report.json  report.md
results-ollama-trials/trial3/: report.html  report.json  report.md
tests/: test_branchbreak.py  test_redforge.py
